frame/support/test/tests/pallet_ui/call_invalid_vis_2.stderr
error: Invalid pallet::call, dispatchable function must be public: `pub fn`
  --> $DIR/call_invalid_vis_2.rs:20:3
   |
20 |         pub(crate) fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {
   |         ^^^
